--- a/PsuedoCode/css/body.css
+++ b/PsuedoCode/css/body.css
@@ -68,3 +68,13 @@
 	top: 5px;
 	left: 50px;
 }
+
+
+.linetable {
+    border-bottom: 1px solid black;
+    border-top: 1px solid black;
+    border-collapse: collapse;
+    text-align: left;
+    vertical-align:middle;
+
+}
